--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,3 +21,27 @@ jobs:
           cache: "npm"
       - run: npm install
       - run: npm run build
+
+  depoly:
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: SSH deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            curl -o-   https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh    | bash
+            . ~/.nvm/nvm.sh
+
+             nvm instal 14
+             npm install -g pm2
+             cd ~/inventory_frontend
+             git pull origin main
+             npm install
+             npm run build
+             pm2 restart api
