--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,10 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          script: |
-            curl -o-   https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh  | bash
-            . ~/.nvm/nvm.sh
-
-             nvm instal 14
-             npm install -g pm2
-             cd ~/inventory_frontend
-             git pull origin main
-             npm install
-             npm run build
-             pm2 restart api
+          script: 
+            npm install -g pm2
+            cd ~/inventory_frontend
+            git pull origin main
+            npm install
+            npm run build
+            pm2 restart api
